# OpenMinecraft

./: .gitignore  Minecraft.sln  README.md
EnvSensor/: CMakeLists.txt  README.md  main.cpp
Minecraft/: Block.cpp  Block.h  BlockLoader.cpp  BlockLoader.h  BlockRenderer.cpp  BlockRenderer.h  BlockType.cpp  BlockType.h  BufferBlockData.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Chunk.cpp  Chunk.h  Engine.cpp  Engine.h  EngineStatus.cpp  EngineStatus.h  FrustumCull.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  ImGuiRenderer.cpp  ImGuiRenderer.h  InputManager.cpp  InputManager.h  InputState.cpp  InputState.h  KeyboardEvents.cpp  Minecraft.vcxproj  Minecraft.vcxproj.filters  Networking.cpp  Networking.h  NetworkingJS.cpp  NetworkingNative.cpp  PairHash.h  Player.h  (+23 more)
Minecraft/FastNoise/: FastNoise.cpp  FastNoise.h
Minecraft/data/: PlayerRenderer.frag  PlayerRenderer.vert  block.frag  block.vert  blockdata.txt  skybox.frag  skybox.vert
Server/: README.MD  accessdenied.html  api-endpoints.js  dashboard.html  game-logic.js  login.html  manageaccount.html  manageusers.html  package-lock.json  package.json  server.js
Server/DatabaseTables/: SensorData.js  UserData.js
Server/public/: style.css
Server/views/: dashboard.ejs  login.ejs  manageaccount.ejs  manageusers.ejs
